fixed mobile whitespace

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,11 +8,19 @@ html,body{
  font-family: 'Montserrat', 'Libre Franklin' , sans-serif;
  margin:0;
  padding:0;
- height:100vh;
- overflow:hidden;
 }
 h1,h2,h3,h4,h5,h6,p,div,span,section,aside,article{
   margin:0;
   padding:0;
   box-sizing: border-box;
+}
+html{
+  height:100%;
+  width:100%;
+  overflow:hidden;
+  position:fixed;
+}
+body{
+  height:100vh;
+  width:100vw;
 }
